# Troiani

./: CMakeLists.txt  INSTALL.md  README.md
examples/: CMakeLists.txt  basic.tr
examples/1_basic/: basic.tr
include/cli/: CLIParser.h
include/driver/: CLIParser.h
include/preprocessing/: Preprocessor.h
include/utils/: Config.h  Error.h
src/: CMakeLists.txt
src/cli/: CLIParser.cpp  CLIParser.h  CMakeLists.txt
src/driver/: CLIParser.cpp  CMakeLists.txt  main.cpp
src/frontend/: CMakeLists.txt  FrontEnd.cpp  FrontEnd.h  Troiani.g4  troiani.g4
src/frontend/.antlr/: Troiani.interp  TroianiLexer.interp  TroianiLexer.java  TroianiLexer.tokens  TroianiParser.java
src/frontend/antlr-files/: Troiani.interp  TroianiBaseListener.cpp  TroianiBaseListener.h  TroianiBaseVisitor.cpp  TroianiBaseVisitor.h  TroianiLexer.cpp  TroianiLexer.h  TroianiLexer.interp  TroianiLexer.tokens  TroianiListener.cpp  TroianiListener.h  TroianiParser.cpp  TroianiParser.h  TroianiVisitor.cpp  TroianiVisitor.h
src/frontend/ast/: Ast.cpp  Ast.h  CMakeLists.txt  Span.cpp  Span.h
src/frontend/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/frontend/parser/: CMakeLists.txt  Parser.h
src/frontend/semantic/: CMakeLists.txt  Scope.cpp  Scope.h  Semantic.cpp  Semantic.h  Symbols.h  Types.h
src/preprocessing/: CMakeLists.txt  Preprocessor.cpp  Preprocessor.h
src/utils/: CMakeLists.txt  Config.cpp  Config.h  Error.cpp  Error.h  SourceFile.cpp  SourceFile.h
tests/: CMakeLists.txt
